--- a/_config.yml
+++ b/_config.yml
@@ -2,20 +2,20 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: N.L. # the website title (if blank, full name will be used instead)
+title: Nina Lanzer. # the website title (if blank, full name will be used instead)
 first_name: Nina 
 middle_name: K.
 last_name: Lanzer
-email: you@example.com
+email: nina.lanzer@posteo.de
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Personal web page of Nina Lanzer
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
+keywords: Nina Lanzer, contact, law  # add your own keywords or leave empty
 
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
+lang: en # the language of your site (for example: en, ger
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://ninalanzer.github.io # the base hostname & protocol for your site
