--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,31 +2,31 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Nina Katrin Lanzer
     - name: Date of Birth
-      value: 14th March 1879
+      value: 10.01.1989
     - name: Languages
-      value: English, German
+      value: English, German, French, Latin
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: UFZ Helmholtz für Umweltforschung
+      year: 2022
       description:
-        - Description 1.
-        - Description 2.
+        - Bergrecht
+        - Allgemeines Umweltrecht
+        - Rechtsphilosophie, insb. Umweltethik
         - title: Description 3.
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: Wissenschaftliche Hilfskraft
+      institution: Lehrstuhl für Strafrecht, Strafprozessrecht und Europäisches Strafrecht an der Universität Leipzig
+      year: 2016 - 2017
       description:
-        - Description 1.
-        - Description 2.
+        - Leitung eines Tutoriums („Einführung in das Recht und die Rechtswissenschaft“) 
 
 - title: Experience
   type: time_table
