--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,7 +11,7 @@
 - title: Education
   type: time_table
   contents:
-    - title: PhD
+    - title: Dr. jur.
       institution: UFZ Helmholtz für Umweltforschung
       year: 2022
       description:
@@ -22,44 +22,35 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Wissenschaftliche Hilfskraft
-      institution: Lehrstuhl für Strafrecht, Strafprozessrecht und Europäisches Strafrecht an der Universität Leipzig
-      year: 2016 - 2017
+    - title: Studium der Philosophie 
+      institution: Universität Leipzig
+      year: 2012 - 2016
       description:
-        - Leitung eines Tutoriums („Einführung in das Recht und die Rechtswissenschaft“) 
+        -  Studiengang Bachelor Sozialwissenschaften und Philosophie mit Kernfach Philosophie an der Universität Leipzig; Abschluss: Bachelor of Arts 
+    - title: Studium der Rechtswissenschaften  
+      institution: Universität Leipzig, Universitee Rouen
+      year: 2007 - 2014
+      description:
+        -  Rechtswissenschaften in Leipzig und Rouen; Abschluss: Erstes Juristisches Staatsexamen 
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Wissenschaftliche Hilfskraft
+      institution: Universität Leipzig
+      year: 2016 - 2017
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+        - Lehrstuhl für Strafrecht, Strafprozessrecht und Europäisches Strafrecht (Prof. Dr. D. Klesczewski) 
+        - Leitung eines Tutoriums („Einführung in das Recht und die Rechtswissenschaft“) 
+    - title: Wissenschaftliche Hilfskraft
+      institution: Helmholtz-Zentrum für Umweltforschung – UFZ, Department Umwelt- und Planungsrecht 
+      year: 2011, 2014
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Studentische Hilfskraft
+      institution: Universität Leipzig
+      year: 2009 - 2014
+      description: 
+        - bei Prof. Dr. D. Klesczewski 
 
 - title: Open Source Projects
   type: time_table
